Begin refactor for Xenon rendering to be able to apply mutiple renderes per slide and for renderers to have layout's be overriden

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -240,7 +240,7 @@
 
                 <Viewbox Grid.Row="0">
                     <Grid>
-                        <Border VerticalAlignment="Top">
+                        <Border VerticalAlignment="Top" BorderThickness="10" BorderBrush="DarkMagenta" Margin="10">
                             <local:SlideContentPresenter x:Name="FocusSlide"></local:SlideContentPresenter>
                         </Border>
                     </Grid>
