--- a/UIControls/LayoutTreeItem.xaml
+++ b/UIControls/LayoutTreeItem.xaml
@@ -6,9 +6,9 @@
              xmlns:local="clr-namespace:UIControls"
              mc:Ignorable="d" 
              d:DesignHeight="10" d:DesignWidth="100">
-    <Grid>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Name="tbDisplayName">Item</TextBlock>
+    <Grid Background="White">
+        <StackPanel Orientation="Horizontal" Background="White">
+            <TextBlock Foreground="Black" Name="tbDisplayName">Item</TextBlock>
             <Button Click="Click_EditLayout" Width="15" Height="15" Background="Transparent" BorderBrush="Transparent" Margin="20,0,0,0">
                 <Image Source="../ViewControls/Images/Pencil.png"></Image>
             </Button>
