--- a/UIControls/LayoutDesigner.xaml
+++ b/UIControls/LayoutDesigner.xaml
@@ -15,13 +15,13 @@
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0" Background="#202020">
                     <StackPanel Orientation="Horizontal">
-                        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                        <!--<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
                             <Button Height="40" Width="80" Margin="10,0,0,0" Background="Orange">Overwrite</Button>
                             <TextBlock VerticalAlignment="Center" Foreground="White" Margin="5,0,0,0">existing [</TextBlock>
                             <TextBlock Name="tbnameorig1" VerticalAlignment="Center" Foreground="White">Layout Name</TextBlock>
                             <TextBlock VerticalAlignment="Center" Foreground="White">]</TextBlock>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="30,0,0,0">
+                        </StackPanel>-->
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10,0,0,0">
                             <Button Click="Click_SaveAs" Height="40" Width="80" Margin="10,0,0,0" Background="LimeGreen">Save As</Button>
                             <TextBlock VerticalAlignment="Center" Foreground="White" Margin="5,0,5,0">(New Name)</TextBlock>
                             <TextBox Name="tbName" Width="400" Height="24" TextAlignment="Left" VerticalContentAlignment="Center"></TextBox>
