--- a/UIControls/LayoutTreeItem.xaml
+++ b/UIControls/LayoutTreeItem.xaml
@@ -5,13 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UIControls"
              mc:Ignorable="d" 
-             d:DesignHeight="10" d:DesignWidth="100">
-    <Grid Background="White">
-        <StackPanel Orientation="Horizontal" Background="White">
-            <TextBlock Foreground="Black" Name="tbDisplayName">Item</TextBlock>
-            <Button Click="Click_EditLayout" Width="15" Height="15" Background="Transparent" BorderBrush="Transparent" Margin="20,0,0,0">
-                <Image Source="../ViewControls/Images/Pencil.png"></Image>
-            </Button>
-        </StackPanel>
+             d:DesignHeight="40" d:DesignWidth="200">
+    <Grid Height="40">
+        <Border Background="LightGray" CornerRadius="10" Margin="2">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <TextBlock Foreground="Black" Name="tbDisplayName" VerticalAlignment="Center" Padding="10">Item</TextBlock>
+                <Button Name="btn_edit" Click="Click_EditLayout" Width="30" Height="30" Background="Transparent" BorderBrush="LimeGreen" BorderThickness="2" Margin="0,0,10,0">
+                    <Image Source="../ViewControls/Images/Artist.png"></Image>
+                </Button>
+                <Button Name="btn_delete" Click="Click_Delete" Width="30" Height="30" Background="Transparent" BorderBrush="Red" BorderThickness="2" Margin="0,0,10,0">
+                    <Image Source="../ViewControls/Images/Trash.png"></Image>
+                </Button>
+            </StackPanel>
+        </Border>
     </Grid>
 </UserControl>
