--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -59,9 +59,9 @@
                 </MenuItem>
                 <Separator></Separator>
                 <MenuItem Name="mi_importoption_inferpostset" Header="Add Postset To Slides" IsCheckable="True" IsChecked="True"></MenuItem>
-                <MenuItem Name="mi_importoption_useupnextforhymns" Header="Use UpNext for Hymns" IsCheckable="True" IsChecked="True"></MenuItem>
+                <MenuItem Name="mi_importoption_useupnextforhymns" Header="Use UpNext for Hymns" IsCheckable="True" IsChecked="False"></MenuItem>
                 <MenuItem Name="mi_importoption_notonlyknowncaptions" Header="Add Unknown Captions" IsCheckable="True" IsChecked="False"></MenuItem>
-                <MenuItem Name="mi_importoption_useresponsiveliturgy" Header="Use Responsive Liturgy" IsCheckable="True" IsChecked="True"></MenuItem>
+                <MenuItem Name="mi_importoption_useresponsiveliturgy" Header="Use Responsive Liturgy" IsCheckable="True" IsChecked="False"></MenuItem>
                 <Separator></Separator>
                 <MenuItem Name="miimport_adv" Click="ClickImportServiceAdv" Header="Import Wizard"></MenuItem>
             </MenuItem>
